--- a/website/public/index.html
+++ b/website/public/index.html
@@ -19,6 +19,10 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+
+    <head>
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+    </head>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
